lib/infra/20-promtail.yml
# promtail
# -config.file docs/promtail-local-config.yaml
#
# image: grafana/promtail:master

# container.withEnv([
#   container.envType.fromFieldPath('HOSTNAME', 'spec.nodeName'),
# ]) +
# container.mixin.securityContext.withPrivileged(true) +
# container.mixin.securityContext.withRunAsUser(0),

# promtail_daemonset:
#  daemonSet.new('promtail', [$.promtail_container]) +
#  daemonSet.mixin.spec.template.spec.withServiceAccount('promtail') +
#  $.util.configVolumeMount('promtail', '/etc/promtail') +
#  $.util.hostVolumeMount('varlog', '/var/log', '/var/log') +
#  $.util.hostVolumeMount('varlibdockercontainers', '/var/lib/docker/containers', '/var/lib/docker/containers', readOnly=true),

# Grab promtail_configs / scrape_configs from loki source

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: promtail
  name: promtail
  namespace: infra
spec:
  minReadySeconds: 10
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      containers:
      - args:
          - -client.url=http://loki.infra.svc.cluster.local:3100/loki/api/prom/push # TOOD(adam): HTTPS
          - -config.file=/etc/promtail/promtail.yml
        image: grafana/promtail:1.4.0
        imagePullPolicy: Always
        name: promtail
        ports:
        - containerPort: 80
          name: http-metrics
        resources:
          limits:
            cpu: 250m
            memory: 50Mi
          requests:
            cpu: 10m
            memory: 25Mi
        securityContext:
          privileged: true
          runAsUser: 0
        volumeMounts:
        - mountPath: /etc/promtail
          name: promtail
        - mountPath: /var/log
          name: varlog
        - mountPath: /var/lib/docker/containers
          name: varlibdockercontainers
          readOnly: true
      serviceAccount: promtail
      tolerations:
      - effect: NoSchedule
        operator: Exists
      volumes:
      - configMap:
          name: promtail
        name: promtail
      - hostPath:
          path: /var/log
        name: varlog
      - hostPath:
          path: /var/lib/docker/containers
        name: varlibdockercontainers
  updateStrategy:
    type: RollingUpdate

---
