lib/infra/14-prometheus.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: infra
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: infra
  labels:
    app: prometheus
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      priorityClassName: high-priority
      terminationGracePeriodSeconds: 30
      # TODO(adam): enable this once we run non pre-emptible nodes
      # tolerations:
      #   - key: cloud.google.com/gke-preemptible
      #     operator: Equal
      #     value: "true"
      #     effect: NoSchedule
      containers:
      - image: prom/prometheus:v2.18.1
        imagePullPolicy: Always
        name: prometheus
        args:
          - --config.file=/opt/prometheus/prometheus.yml
          - --storage.tsdb.path=/data/prometheus
          - --storage.tsdb.retention.time=168h # 7 * 24hours
          # - --web.enable-lifecycle # TODO(adam): kubectl port-forward doesn't work to curl -XPOST /-/reload
          - --web.console.libraries=/usr/share/prometheus/console_libraries
          - --web.console.templates=/usr/share/prometheus/consoles
          - --web.external-url=https://infra.moov.io/prometheus/
        volumeMounts:
          - name: prometheus-config
            mountPath: /opt/prometheus/
          - name: prometheus-kubernets-monitoring-alerts
            mountPath: /opt/prometheus-kubernets-monitoring-alerts/
          - name: prometheus-kubernets-monitoring-rules
            mountPath: /opt/prometheus-kubernets-monitoring-rules/
          - name: prometheus-rules
            mountPath: /opt/prometheus-rules/
          - name: prometheus-mysql-rules
            mountPath: /opt/prometheus-mysql-rules/
          - name: prometheus-data
            mountPath: /data/prometheus
        ports:
          - containerPort: 9090
            name: http
            protocol: TCP
        resources:
          limits:
            memory: 3000Mi
          requests:
            memory: 2000Mi
        readinessProbe:
          httpGet:
            path: /prometheus/-/ready
            port: 9090
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /prometheus/-/healthy
            port: 9090
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        securityContext:
          # TODO(adam): shouldn't need root
          # https://github.com/kubernetes/kubernetes/issues/2630
          runAsUser: 0
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
            items:
              - key: prometheus.yml
                path: prometheus.yml
        - name: prometheus-kubernets-monitoring-alerts
          configMap:
            name: prometheus-kubernets-monitoring-alerts
            items:
              - key: prometheus_alerts.yml
                path: prometheus_alerts.yml
        - name: prometheus-kubernets-monitoring-rules
          configMap:
            name: prometheus-kubernets-monitoring-rules
            items:
              - key: prometheus_rules.yml
                path: prometheus_rules.yml
        - name: prometheus-rules
          configMap:
            name: prometheus-rules
            items:
              - key: prometheus-app-rules.yml
                path: prometheus-app-rules.yml
              - key: prometheus-domain-rules.yml
                path: prometheus-domain-rules.yml
              - key: prometheus-kubernetes-rules.yml
                path: prometheus-kubernetes-rules.yml
              - key: prometheus-paygate-rules.yml
                path: prometheus-paygate-rules.yml
              - key: prometheus-watchman-rules.yml
                path: prometheus-watchman-rules.yml
        - name: prometheus-mysql-rules
          configMap:
            name: prometheus-mysql-rules
            items:
              - key: prometheus-mysql-rules.yml
                path: prometheus-mysql-rules.yml
        - name: prometheus-data
          persistentVolumeClaim:
            claimName: prometheus-data
      restartPolicy: Always

---
