lib/infra/15-grafana.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: infra
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: infra
  labels:
    app: grafana
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      serviceAccountName: grafana
      terminationGracePeriodSeconds: 30
      containers:
      - image: nginx:1.19
        imagePullPolicy: Always
        name: nginx
        args:
          - nginx
          - -c
          - /opt/nginx/nginx.conf
        volumeMounts:
          - name: nginx-conf
            mountPath: /opt/nginx/
          - name: nginx-temp
            mountPath: /var/cache/nginx/
          - name: nginx-www
            mountPath: /usr/share/nginx/www/
        ports:
          - containerPort: 9090
            name: http
            protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 25Mi
          requests:
            cpu: 25m
            memory: 10Mi
      - image: nginx/nginx-prometheus-exporter:0.4.2
        imagePullPolicy: Always
        name: nginx-exporter
        args:
          - -nginx.scrape-uri=http://localhost:9090/stub_status
        ports:
          - containerPort: 9113
            name: metrics
            protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 25Mi
          requests:
            cpu: 50m
            memory: 10Mi
        readinessProbe:
          httpGet:
            path: /metrics
            port: 9113
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /metrics
            port: 9113
          initialDelaySeconds: 5
          periodSeconds: 10
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
      - image: grafana/grafana:7.3.3
        imagePullPolicy: Always
        name: grafana
        resources:
          limits:
            cpu: 50m
            memory: 50Mi
          requests:
            cpu: 25m
            memory: 50Mi
        volumeMounts:
          - name: grafana-data
            mountPath: /opt/grafana/
        ports:
          - containerPort: 3000
            name: http
            protocol: TCP
        securityContext:
          # runAsNonRoot: true
          # runAsUser: 65534
          runAsUser: 0 # TODO(adam): we need to lower/change this uid
          # From https://github.com/grafana/grafana/issues/13187
          # runAsUser: 472
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-data
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: default.conf
                path: conf.d/default.conf
        - name: nginx-temp
          emptyDir: {}
        - name: nginx-www
          configMap:
            name: nginx-conf
            items:
              - key: metrics
                path: metrics
              - key: index.html
                path: index.html
      restartPolicy: Always

---
