lib/infra/21-domain-exporter.yml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: domain-exporter
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domain-exporter
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: domain-exporter
    spec:
      containers:
      - name: domain-exporter
        image: quay.io/shift/domain_exporter:v0.1.8-go1.11.4
        ports:
          - containerPort: 9203
        args: [
          "--config=/etc/domain-exporter/domains.yaml",
          "--bind=:9203",
          "--log.level=info",
        ]
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 0.1
            memory: 50Mi
          requests:
            cpu: 25m
            memory: 25Mi
        volumeMounts:
        - name: domain-exporter
          mountPath: /etc/domain-exporter
          readOnly: true
      volumes:
      - name: domain-exporter
        configMap:
          defaultMode: 0600
          name: domain-exporter

---

apiVersion: v1
kind: Service
metadata:
  name: domain-exporter
  namespace: infra
  annotations:
    prometheus.io/port: "9203"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
  - port: 9203
    targetPort: 9203
    protocol: TCP
    name: domain-exporter
  selector:
    app: domain-exporter
