lib/infra/22-alertmanager.yml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: infra
spec:
  type: ClusterIP
  selector:
    app: alertmanager
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: infra
  labels:
    app: alertmanager
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      serviceAccountName: alertmanager
      terminationGracePeriodSeconds: 30
      containers:
      - image: prom/alertmanager:v0.20.0
        imagePullPolicy: Always
        name: alertmanager
        args:
          - --config.file=/opt/alertmanager/alertmanager.yml
          - --web.listen-address=:9090
          - --storage.path=/data/alertmanager/
          - --data.retention=336h # 14*24h (2 weeks)
          - --alerts.gc-interval=30m
          - --web.external-url=https://infra.moov.io/alertmanager/
        volumeMounts:
          - name: alertmanager-config
            mountPath: /opt/alertmanager/
          - name: alertmanager-data
            mountPath: /data/alertmanager/
        ports:
          - containerPort: 9090
            name: http
            protocol: TCP
        readinessProbe:
          httpGet:
            path: /alertmanager/api/v2/status
            port: 9090
          initialDelaySeconds: 30
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /alertmanager/api/v2/status
            port: 9090
          initialDelaySeconds: 30
          periodSeconds: 30
        securityContext:
          # TODO(adam): shouldn't need root
          # https://github.com/kubernetes/kubernetes/issues/2630
          runAsUser: 0
      volumes:
        - name: alertmanager-config
          configMap:
            name: alertmanager-config
            items:
              - key: alertmanager.yml
                path: alertmanager.yml
        - name: alertmanager-data
          persistentVolumeClaim:
            claimName: alertmanager-data
      restartPolicy: Always
---
