lib/infra/23-polaris-dashboard.yml
---
# Source: polaris/templates/dashboard.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polaris-dashboard
  namespace: infra
  labels:
    app: polaris
spec:
  ports:
  - name: dashboard
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: polaris
    component: dashboard
  type: ClusterIP
---
# Source: polaris/templates/dashboard.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    checksum/config: '8aa5a565fba7a2db98d46752087de8c1dcc83b70cd762c5829d5ba01270d54a2'
  name: polaris
  namespace: infra
  labels:
    app: polaris
    component: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polaris
      component: dashboard
  template:
    metadata:
      labels:
        app: polaris
        component: dashboard
    spec:
      volumes:
      - name: config
        configMap:
          name: polaris
      containers:
      - command:
          - polaris
          - -dashboard
          - -dashboard-base-path=/polaris/
          - -dashboard-port=8080
          - -config=/opt/app/config.yaml
          - -log-level=debug
        image: quay.io/reactiveops/polaris:1.0.1
        imagePullPolicy: Always
        name: dashboard
        ports:
          - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /polaris/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /polaris/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 20
        resources:
          limits:
            cpu: 50m
            memory: 50Mi
          requests:
            cpu: 10m
            memory: 10Mi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          capabilities:
            drop:
              - ALL
        volumeMounts:
        - name: config
          mountPath: /opt/app/config.yaml
          subPath: config.yaml
          readOnly: true
      serviceAccountName: polaris
      nodeSelector: {}
      tolerations: []
---
