lib/infra/24-gofuzz-exporter.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gofuzz-exporter
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gofuzz-exporter
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: gofuzz-exporter
    spec:
      containers:
      - name: gofuzz-exporter
        image: adamdecaf/gofuzz_exporter:v0.1.3
        ports:
          - containerPort: 10000
        args:
          - "-interval=60s"
          - "-loki.address=http://loki.infra.svc.cluster.local:3100/loki/"
          - "-apps=achfuzz,imagecashletterfuzz,iso8583fuzz,metro2fuzz,wirefuzz"
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 25m
            memory: 50Mi
          requests:
            cpu: 10m
            memory: 25Mi
        readinessProbe:
          httpGet:
            path: /metrics
            port: 10000
          initialDelaySeconds: 5
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /metrics
            port: 10000
          initialDelaySeconds: 5
          periodSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: gofuzz-exporter
  namespace: infra
  annotations:
    prometheus.io/port: "10000"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
  - port: 10000
    targetPort: 10000
    protocol: TCP
    name: gofuzz-exporter
  selector:
    app: gofuzz-exporter
---
