lib/infra/10-oauth2-proxy.yml
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: infra
spec:
  type: ClusterIP
  selector:
    app: oauth2-proxy
  ports:
    - name: http
      protocol: TCP
      port: 4180
      targetPort: 4180

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: infra
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/content-type-nosniff: "true"
    ingress.kubernetes.io/force-hsts: "true"
    ingress.kubernetes.io/hsts-max-age: "315360000"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/ssl-host: "infra.moov.io"
    ingress.kubernetes.io/ssl-force-host: "true"
spec:
  rules:
    - host: infra.moov.io
      http:
        paths:
          - path: /oauth2
            backend:
              serviceName: oauth2-proxy
              servicePort: 4180

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: infra
  labels:
    app: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: "kubernetes.io/hostname"
      serviceAccountName: oauth2-proxy
      terminationGracePeriodSeconds: 30
      containers:
      - image: quay.io/pusher/oauth2_proxy:v3.1.0 # TODO(adam): v3.2.0 might be broken? can't find _oauth2_proxy cookie
        imagePullPolicy: Always
        name: oauth2-proxy
        resources:
          limits:
            cpu: 0.1
            memory: 50Mi
          requests:
            cpu: 25m
            memory: 10Mi
        args:
          - -cookie-domain=moov.io
          - -cookie-secure
          - -email-domain=*
          # - -gcp-healthchecks # only in v3.2.0 and later
          - -github-org=moov-io
          # - -github-team=infra
          - -http-address=0.0.0.0:4180
          - -pass-host-header
          - -provider=github
          - -redirect-url=https://infra.moov.io/oauth2/callback
          - -upstream=http://grafana.infra.svc.cluster.local:9090/grafana/,http://prometheus.infra.svc.cluster.local:9090/prometheus/,http://alertmanager.infra.svc.cluster.local:9090/alertmanager/,http://traefik-dashboard.lb.svc.cluster.local:8080/traefik/,http://loki.infra.svc.cluster.local:3100/loki/,http://kube-ingress-index.infra.svc.cluster.local:8080/
        ports:
          - containerPort: 4180
            name: http
            protocol: TCP
        # securityContext:
        #   readOnlyRootFilesystem: true
        #   runAsNonRoot: true
        #   runAsUser: 10001
      restartPolicy: Always

---
