lib/infra/12-kube-ingress-index.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-ingress-index
  namespace: infra
spec:
  type: ClusterIP
  selector:
    app: kube-ingress-index
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-ingress-index
  namespace: infra
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/content-type-nosniff: "true"
    ingress.kubernetes.io/force-hsts: "true"
    ingress.kubernetes.io/hsts-max-age: "315360000"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/ssl-host: "infra.moov.io"
    ingress.kubernetes.io/ssl-force-host: "true"
spec:
  rules:
    - host: infra.moov.io
      http:
        paths:
          - path: /
            backend:
              serviceName: oauth2-proxy
              servicePort: 4180

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-ingress-index
  namespace: infra
  labels:
    app: kube-ingress-index
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kube-ingress-index
  template:
    metadata:
      labels:
        app: kube-ingress-index
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: "kubernetes.io/hostname"
      serviceAccountName: kube-ingress-index
      terminationGracePeriodSeconds: 30
      containers:
      - image: adamdecaf/kube-ingress-index:0.2.2-dev
        imagePullPolicy: Always
        name: kube-ingress-indes
        args:
          - -force-tls
          - -namespaces=apps,infra,lb
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
      restartPolicy: Always

---
