lib/infra/13-traefik.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik
  namespace: infra
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefix
    ingress.kubernetes.io/content-type-nosniff: "true"
    ingress.kubernetes.io/force-hsts: "true"
    ingress.kubernetes.io/hsts-max-age: "315360000"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/ssl-host: "infra.moov.io"
    ingress.kubernetes.io/ssl-force-host: "true"
spec:
  rules:
    - host: infra.moov.io
      http:
        paths:
          - path: /traefik
            backend:
              serviceName: oauth2-proxy
              servicePort: 4180
---
